# claude-esp

./: .gitignore  BUILD_LOG.md  PLAN.md  PROTOCOL.md  README.md
docs/: HOMESERVER_PATCH.md  homeserver-display_on_device.patch
firmware/: CMakeLists.txt  README.md  flash.sh  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_config.c  app_config.h  audio.c  audio.h  idf_component.yml  main.c  net.c  net.h  power.c  power.h  protocol.h  ui.c  ui.h  ws_client.c  ws_client.h
firmware/patches/: apply_bsp_patches.sh
gateway/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
gateway/esp_gateway/: __init__.py  __main__.py  audio.py  butler.py  config.py  devclient.py  protocol.py  render.py  server.py  session.py  stt.py  tts.py
gateway/tests/: fakes.py  test_audio.py  test_butler.py  test_server_socket.py  test_session.py
